Fix containers overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,8 +25,6 @@
 
 .valign-middle { vertical-align: middle; }
 
-body { overflow-x: hidden; }
-
 /* Misc */
 #dark-theme-switch, #light-theme-switch { 
     cursor: pointer; 
